Fix smartbanner z-index issue
CSS was targetted for android only, this has now been resolved.

--- a/assets/theme/css/ps-theme.css
+++ b/assets/theme/css/ps-theme.css
@@ -575,7 +575,7 @@ body.huxley-authenticated .huxley-myaccount {
 	border-color: #6c757d;
 } */
 /****** smart banner config */
-.smartbanner.smartbanner--android {
+.smartbanner {
 	z-index: 1100;
 }
 
